📚 UI: Add Health Articles & Prediction buttons to MainActivity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,32 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <!-- 📚 View Health Articles Button -->
+    <Button
+        android:id="@+id/btnViewArticles"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:text="📚 View Health Articles"
+        android:textColor="#FFFFFF"
+        android:backgroundTint="#B39DDB"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="64dp"
+        android:layout_marginHorizontal="32dp" />
+
+    <!-- 🔮 Start Cycle Button -->
+    <Button
+        android:id="@+id/btnStartCycle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="🔮 Predict Period"
+        android:textColor="#FFFFFF"
+        android:backgroundTint="#F06292"
+        app:layout_constraintTop_toBottomOf="@+id/btnViewArticles"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="24dp"
+        android:layout_marginHorizontal="32dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
